--- a/hour/templates/hour/home.html
+++ b/hour/templates/hour/home.html
@@ -30,20 +30,19 @@
             </thead>
             <tbody>
              {% for day in days %}
-              <tr>
-               
-                <form action="{% url 'hour:update_day' day.id %}" class="update_time" method="POST">
+              <tr id="row{{day.id}}">
+                <form action="{% url 'hour:update_day' day.id %}" class="update_time" name="update_time" method="POST">
                     {% csrf_token %}
                     <td class="time{{day.id}}"><span>{{day.date | date:"d.m.y"}}</span><input disabled name="datum" type="date" value="{{day.date|date:'Y-m-d'}}" style="display: none;" ></td>
-                    <td class="time{{day.id}}"><span>{{day.start | time:"H:i"}}</span><input name="start" type="time" min="07:00" max="21:00" value="{{day.start | time:'H:i'}}" style="display: none;" ></td>
-                    <td class="time{{day.id}}"><span>{{day.lunch_in | time:"H:i"}}</span><input name="lunch_in" type="time" min="07:00" max="21:00"  value="{{day.lunch_in | time:'H:i'}}" style="display: none;" ></td>
-                    <td class="time{{day.id}}"><span>{{day.lunch_out | time:"H:i"}}</span><input name="lunch_out" type="time" min="07:00" max="21:00"  value="{{day.lunch_out | time:'H:i'}}" style="display: none;" ></td>
-                    <td class="time{{day.id}}"><span>{{day.end | time:"H:i"}}</span><input name="end" type="time" min="07:00" max="21:00"  value="{{day.end | time:'H:i'}}" style="display: none;" ></td>
+                    <td class="time{{day.id}}"><span>{{day.start | time:"H:i"}}</span><input id="start{{day.id}}" name="start" type="time" min="07:00" max="21:00" value="{{day.start | time:'H:i'}}" style="display: none;" ></td>
+                    <td class="time{{day.id}}"><span>{{day.lunch_in | time:"H:i"}}</span><input id="lunch_in{{day.id}}" name="lunch_in" type="time" min="07:00" max="21:00"  value="{{day.lunch_in | time:'H:i'}}" style="display: none;" ></td>
+                    <td class="time{{day.id}}"><span>{{day.lunch_out | time:"H:i"}}</span><input id="lunch_out{{day.id}}" name="lunch_out" type="time" min="07:00" max="21:00"  value="{{day.lunch_out | time:'H:i'}}" style="display: none;" ></td>
+                    <td class="time{{day.id}}"><span>{{day.end | time:"H:i"}}</span><input id="end{{day.id}}" name="end" type="time" min="07:00" max="21:00"  value="{{day.end | time:'H:i'}}" style="display: none;" ></td>
                     <td>{{ day.required | floatformat:2 }}</td>
                     <td>{{ day.extra | floatformat:2}}</td>
                     <td>
                         <button value="{{day.id}}" class="btn brn-outline-danger edit"><i class="fa fa-pencil"></i></button>
-                        <button id="save_edit{{day.id}}" type="submmit" value="{{day.id}}" class="btn brn-outline-danger save_edit" style="display: none"><i class="fa fa-check"></i></button>
+                        <button id="save_edit{{day.id}}" type="submmit" value="{{day.id}}" class="btn brn-outline-danger save_edit" style="display: none" ><i class="fa fa-check"></i></button>
                     </td>
                 </form>
                 <td>
