--- a/person_auth/templates/person_auth/base.html
+++ b/person_auth/templates/person_auth/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,17 +9,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="{% static 'hour/styles.css' %}">
     <title> {% block title %} My Site {% endblock %}</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <!-- <div class="container-fluid">
+        <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button> -->
-          <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
-            <div class="container-fluid">
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="container-fluid list">
               <div>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -25,7 +29,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">My working hours</a>
+                    <a class="nav-link" href="{% url 'hour:home' %}">My working hours</a>
                   </li>
                 </ul>
               </div>
@@ -37,20 +41,19 @@
                     <li class="nav-item">
                       <a class="nav-link" href="/logout">Logout</a>
                     </li>
+
                   {% else %}
+
                     <li class="nav-item">
                       <a class="nav-link" href="/login">Login</a>
                     </li>
+
                   {% endif %}
                 </ul>
               </div>
-            <!-- <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form> -->
             </div>
-          <!-- </div> -->
-        <!-- </div> -->
+          </div>
+        </div>
       </nav>
 
 
