--- a/hour/templates/hour/home.html
+++ b/hour/templates/hour/home.html
@@ -5,6 +5,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+{% if user.is_authenticated %}
     <br>
     <div>
         <h3>Create a new day in a calendar</h3>
@@ -47,6 +48,7 @@
         <table class="table">
             <thead>
               <tr>
+                <th scope="col"></th>
                 <th scope="col">Date</th>
                 <th scope="col">Morning</th>
                 <th scope="col">Lanch in</th>
@@ -60,37 +62,52 @@
             </thead>
             <tbody>
              {% for day in days %}
-              <tr id="row{{day.id}}">
-                <form action="{% url 'hour:update_day' day.id %}" class="update_time" name="update_time" method="POST" onsubmit="return validateFormEdit(`{{day.id}}`)">
-                    {% csrf_token %}
-                    <!-- <td style="display: none">incomplete</td> -->
-                    <td class="time{{day.id}}"><span>{{day.date | date:"d.m.y"}}</span><input disabled name="datum" type="date" value="{{day.date|date:'Y-m-d'}}" style="display: none;" ></td>
-                    <td class="time{{day.id}}"><span>{{day.start | time:"H:i"}}</span><input id="start{{day.id}}" name="start" type="time" min="07:00" max="21:00" value="{{day.start | time:'H:i'}}" style="display: none;" ></td>
-                    <td class="time{{day.id}}"><span>{{day.lunch_in | time:"H:i"}}</span><input id="lunch_in{{day.id}}" name="lunch_in" type="time" min="07:00" max="21:00"  value="{{day.lunch_in | time:'H:i'}}" style="display: none;" ></td>
-                    <td class="time{{day.id}}"><span>{{day.lunch_out | time:"H:i"}}</span><input id="lunch_out{{day.id}}" name="lunch_out" type="time" min="07:00" max="21:00"  value="{{day.lunch_out | time:'H:i'}}" style="display: none;" ></td>
-                    <td class="time{{day.id}}"><span>{{day.end | time:"H:i"}}</span><input id="end{{day.id}}" name="end" type="time" min="07:00" max="21:00"  value="{{day.end | time:'H:i'}}" style="display: none;" ></td>
-                    <td>{{ day.required | floatformat:2 }}</td>
-                    <td>{{ day.extra | floatformat:2}}</td>
-                    <td>
-                        <button value="{{day.id}}" class="btn btn-outline-info edit"><i class="fa fa-pencil"></i></button>
-                        <button id="save_edit{{day.id}}" type="submmit" value="{{day.id}}" class="btn btn-outline-success save_edit" style="display: none" ><i class="bi bi-check-lg"></i></button>
-                        <button id="cancel_edit{{day.id}}" value="{{day.id}}" type="button" class="btn btn-outline-danger cancel" style="display: none"><i class="bi bi-x" ></i></button>
-                    </td>
-                </form>
-                <td>
-                    <form action="{% url 'hour:delete_day' day.id %}" method="POST">
+                
+                {% if day.completed %}
+                    <tr id="row{{day.id}}" class="each_row">
+                {% else %}
+                    <tr id="row{{day.id}}" class="each_row" style="background-color:lightcoral;">        
+                {% endif %}
+                
+                    <form class="update_time" name="update_time" method="POST" data-id="{{day.id}}">
                         {% csrf_token %}
-                        <button type="submmit" value="{{day.id}}" class="btn btn-outline-danger" onclick="return confirm('Are you sure?');"><i class="fa fa-trash"></i></button>
-                    </form>
-                </td>
+                        <td>
+                            <span id="span_completed{{day.id}}" data-completed="{{day.completed}}" class="completed">
+                            {% if day.completed %}
 
-              </tr>
+                            {% else %}
+                            uncompleted
+                            {% endif %}
+                            </span>
+                        </td>
+                        <td class="time{{day.id}}"><span>{{day.date | date:"d.m.y"}}</span><input disabled id="date{{day.id}}" name="datum" type="date" value="{{day.date|date:'Y-m-d'}}" style="display: none;" ></td>
+                        <td class="time{{day.id}}"><span id="span_start{{day.id}}">{{day.start | time:"H:i"}}</span><input id="start{{day.id}}" name="start" type="time" min="07:00" max="21:00" value="{{day.start | time:'H:i'}}" style="display: none;" ></td>
+                        <td class="time{{day.id}}"><span id="span_lunch_in{{day.id}}">{{day.lunch_in | time:"H:i"}}</span><input id="lunch_in{{day.id}}" name="lunch_in" type="time" min="07:00" max="21:00"  value="{{day.lunch_in | time:'H:i'}}" style="display: none;" ></td>
+                        <td class="time{{day.id}}"><span id="span_lunch_out{{day.id}}">{{day.lunch_out | time:"H:i"}}</span><input id="lunch_out{{day.id}}" name="lunch_out" type="time" min="07:00" max="21:00"  value="{{day.lunch_out | time:'H:i'}}" style="display: none;" ></td>
+                        <td class="time{{day.id}}"><span id="span_end{{day.id}}">{{day.end | time:"H:i"}}</span><input id="end{{day.id}}" name="end" type="time" min="07:00" max="21:00"  value="{{day.end | time:'H:i'}}" style="display: none;" ></td>
+                        <td id="span_required{{day.id}}">{{ day.required | floatformat:2 }}</td>
+                        <td id="span_extra{{day.id}}">{{ day.extra | floatformat:2}}</td>
+                        <td>
+                            <button value="{{day.id}}" class="btn btn-outline-info edit"><i class="fa fa-pencil"></i></button>
+                            <button id="save_edit{{day.id}}" type="submmit" value="{{day.id}}" class="btn btn-outline-success save_edit" style="display: none" ><i class="bi bi-check-lg"></i></button>
+                            <button id="cancel_edit{{day.id}}" value="{{day.id}}" type="button" class="btn btn-outline-danger cancel" style="display: none"><i class="bi bi-x" ></i></button>
+                        </td>
+                    </form>
+                    <td>
+                        <form action="{% url 'hour:delete_day' day.id %}" method="POST">
+                            {% csrf_token %}
+                            <button type="submmit" value="{{day.id}}" class="btn btn-outline-danger" onclick="return confirm('Are you sure?');"><i class="fa fa-trash"></i></button>
+                        </form>
+                    </td>
+
+                </tr>
               {% empty %}
               <p>No days yet.</p>
              {% endfor %}
             </tbody>
           </table>
     </div>
+{% endif %}
 
     
 
