--- a/hour/static/hour/styles.css
+++ b/hour/static/hour/styles.css
@@ -3,7 +3,10 @@
     align-items: center;
     justify-content: space-between;
 }
+#profile {
+    
+}
 
-.red {
-    background-color: lightcoral;
+#profile_picture {
+
 }
