--- a/person_auth/templates/person_auth/home.html
+++ b/person_auth/templates/person_auth/home.html
@@ -1,26 +1,119 @@
 {% extends 'person_auth/base.html' %}
-{% block title %}Home page{% endblock %}
+{% load static %}
+{% block title %}Profile page{% endblock %}
+{% load crispy_forms_tags %}
+
 {% block content %}
-    {% for post in posts %}
-        <div class="card mt-2">
-            <div class="card-header"><strong>@{{post.author.username}}</strong></div>
-            <div class="card-body d-flex flex-row justify-content-between">
-                <div>
-                    <h5 class="card-title">{{post.title}}</h5>
-                    <p>{{post.description}}</p>
-                </div>
-                <div>
-                    {% if user == post.author %}
-                    <form action="" method="post">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger" name="post_id" value="{{ post.id}}">Delete</button>
-                    </form>
-                    {% endif %}
-                </div>
+<br>
+
+    
+    <div class="container d-flex flex-ms-column">
+        <h1>Daily check-in</h1>
+        <form action="" method="POST">
+            {% csrf_token %}{{form | crispy}}
+            <button type="submit" class="btn btn-success">Add day</button>
+        </form>
+    </div>
+
+    
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="https://avatars.dicebear.com/api/{{profile.pic_first}}/{{profile.random_sequence}}.svg?h=256&w=256" class="img-fluid rounded-circle" alt="avatar">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">{{user.username}}</h5>
+              <p class="card-text">{{profile.department}}</p>
+              <p class="card-text">{{profile.bio}}</p>
+              <p class="card-text"><small class="text-muted"></small></p>
+         
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Update my profile</button>
             </div>
-            <div class="card-footer text-muted">{{post.created_at}}</div>
+          </div>
         </div>
-    {% empty %}
-        <p>No posts yet.</p>
-    {% endfor %}
+    </div>
+
+    
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Update a profile</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <form action="{% url 'person_auth:profile_change' user.id %}" method="POST">
+        <div class="modal-body">
+            
+            <div class="mb-3"><h1>{{user.username}}</h1></div>
+            <p><small class="text-muted">Your avatar will be generated according to your TYPE and RANDOM SEQUENCE choice</small></p>
+            <img id="avatar" src="https://avatars.dicebear.com/api/{{profile.pic_first}}/{{profile.random_sequence}}.svg?h=256&w=256" class="img-fluid rounded-circle" alt="avatar">
+            {% csrf_token %}
+
+                <div id="div_id_department" class="mb-3"> 
+                    <label for="id_department" class="form-label requiredField">Department
+                        <span class="asteriskField">*</span>
+                    </label> 
+                    <select name="department" class="select form-select" id="id_department"> 
+                        <option value="TECH" selected="">tech</option> 
+                        <option value="ACOUNING">acounting</option> 
+                        <option value="ENVIRO">enviro</option> 
+                        <option value="WAREHOUSE">warehouse</option> 
+                        <option value="QUALITY">quality</option>
+                    </select> 
+                </div>
+
+                <div id="div_id_pic_first" class="mb-3"> 
+                    <label for="id_pic_first" class="form-label requiredField">Type of picture
+                        <span class="asteriskField">*</span> 
+                    </label> 
+                    <select name="pic_first" class="select form-select" id="id_pic_first"> 
+                        <option value="male" selected="">Male</option> 
+                        <option value="female">Female</option> 
+                        <option value="human">Human</option> 
+                        <option value="identicon">Identicon</option> 
+                        <option value="initials">Initials</option> 
+                        <option value="bottts">Bottts</option> 
+                        <option value="avataaars">Avataaars</option> 
+                        <option value="jdenticon">Jdenticon</option> 
+                        <option value="gridy">Gridy</option> 
+                        <option value="micah">Micah</option>
+                    </select>
+                </div>
+
+                <div id="div_id_random_sequence" class="mb-3"> 
+                    <label for="id_random_sequence" class="form-label requiredField">Random sequence (MAX 10 characters)
+                        <span class="asteriskField">*</span> 
+                    </label> 
+                    <input type="text" name="random_sequence" value="john" maxlength="10" class="textinput textInput form-control" required="" id="id_random_sequence"> 
+                </div>
+
+                <div id="div_id_bio" class="mb-3"> 
+                    <label for="id_bio" class="form-label requiredField">Bio
+                        <span class="asteriskField">*</span> 
+                    </label> 
+                    <textarea name="bio" cols="40" rows="10" class="textarea form-control" required="" id="id_bio" {{profile.bio}}>{{profile.bio}}</textarea> 
+                </div>
+
+        </div>
+
+        <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-success">Update</button>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
+ 
+
+   
+
+
 {% endblock %}
+
+{% block script %}
+    <script src="{% static 'person_auth/index.js' %}"></script>
+{% endblock %} 
