add public holiday checkbox

--- a/hour/static/hour/styles.css
+++ b/hour/static/hour/styles.css
@@ -1,5 +1,8 @@
-.list, #create_input_table {
-
-    align-items: center;
+.navbar_list {
+    display: flex;
     justify-content: space-between;
+}
+
+.filtering {
+    display: inline;
 }
