--- a/person_auth/templates/person_auth/base.html
+++ b/person_auth/templates/person_auth/base.html
@@ -16,16 +16,18 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="/">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="container-fluid list">
+            <div class="container navbar_list">
+
+              {% if user.is_authenticated %}
               <div>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'person_auth:home' %}">Home</a>
                   </li>
 
                   <li class="nav-item">
@@ -33,6 +35,8 @@
                   </li>
                 </ul>
               </div>
+              {% endif %}
+
               <div>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   {% if user.is_authenticated %}
@@ -51,10 +55,11 @@
                   {% endif %}
                 </ul>
               </div>
+
             </div>
           </div>
         </div>
-      </nav>
+    </nav>
 
 
     <div class="container">
