add month model

--- a/person_auth/templates/person_auth/home.html
+++ b/person_auth/templates/person_auth/home.html
@@ -34,6 +34,13 @@
         </div>
     </div>
 
+    <div class="actual_hours">
+      <p>Year:{{month.year}}</p>
+      <p>Month:{{month.month}}</p>
+      <p>Required:{{month.required}}</p>
+      <p>Extra:{{month.extra}}</p>
+    </div>
+
     
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
