--- a/hour/templates/hour/home.html
+++ b/hour/templates/hour/home.html
@@ -46,15 +46,20 @@
     <br>
 
     <div id="filtering">
-        <div class="filtering"></div>
-            <select class="form-select" aria-label="Default select example">
-                <option selected>Year</option>
-                <option value="1">2022</option>
-                <option value="2">2023</option>
-                <option value="3">2024</option>
-            </select>
         <div class="filtering">
-            {{form_month | crispy}}
+            <label for="id_year" class="form-label requiredField">
+                Year
+                <span class="asteriskField">*</span>
+            </label>
+                <select name="year" class="select form-select" id="id_year" aria-label="Default select example">
+                    <option value="2022" selected>2022</option>
+                    <option value="2023">2023</option>
+                    <option value="2024">2024</option>
+                </select>
+        </div>
+        <div class="filtering" >
+                {{form_month | crispy}}
+            
         </div>
     </div>
 
@@ -65,8 +70,18 @@
             <thead>
               <tr>
                 <th scope="col"></th>
-                <th scope="col">Public holiday</th>
-                <th scope="col">Date</th>
+                <th scope="col" data-index="1">Public holiday
+                    <!-- <select name="" id="" class="table-filter">
+                        <option value="all"></option>
+                    </select> -->
+                </th>
+                <th scope="col" data-index="2">
+                    Date
+
+                    <!-- <select name="" id="" class="table-filter">
+                        <option value="all"></option>
+                    </select> -->
+                </th>
                 <th scope="col">Morning</th>
                 <th scope="col">Lanch in</th>
                 <th scope="col">Lanch out</th>
