--- a/hour/static/hour/styles.css
+++ b/hour/static/hour/styles.css
@@ -1,4 +1,131 @@
+
+body {
+    /* background-color: #f8f9fa; */
+    background-image: url(https://images.unsplash.com/photo-1588345921523-c2dcdb7f1dcd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 80%;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+main {
+    border-radius: 1rem;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    /* background-color: rgba(248, 249, 250, 0.8); */
+    /* background-color: rgba(195,176,145, 0.8); */
+}
+
+.navbar {
+    --bs-navbar-hover-color: white;
+    --bs-navbar-disabled-color: white;
+    --bs-navbar-active-color: white;
+}
+
 .navbar_list {
+    display: flex;
+    justify-content: space-between;
+}
+
+#profile-card, #card_actual_hours, .card-header {
+    background-color: transparent;
+    border: none;
+}
+
+#profile-card {
+    margin: 20px;
+}
+
+.hours {
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.btn-primary{
+    --bs-btn-font-weight: 600;
+    /* --bs-btn-color: white; */
+    --bs-btn-bg: #4bb;
+    --bs-btn-border-color: #4bb;
+    --bs-btn-border-radius: .5rem;
+    /* --bs-btn-hover-color:  white; */
+    --bs-btn-hover-bg: #0AA;
+    --bs-btn-hover-border-color:#0AA;
+    --bs-btn-focus-shadow-rgb: #0AA;
+    /* --bs-btn-active-color:  white; */
+    --bs-btn-active-bg: #0AA;
+    --bs-btn-active-border-color: #0AA;
+}
+
+.btn-outline-primary {
+    --bs-btn-color:#4bb;
+    --bs-btn-border-color: #4bb;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #4bb;
+    --bs-btn-hover-border-color: #4bb;
+    --bs-btn-focus-shadow-rgb: 13,110,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #4bb;
+    --bs-btn-active-border-color:v
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color:#4bb;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color:#4bb;
+    --bs-gradient: none;
+}
+
+.btn-outline-info {
+    --bs-btn-color:#808000;
+    --bs-btn-border-color: #808000;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #808000;
+    --bs-btn-hover-border-color: #808000;
+    --bs-btn-focus-shadow-rgb: 13,110,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #808000;
+    --bs-btn-active-border-color:v
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color:#808000;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color:#808000;
+    --bs-gradient: none;
+}
+  
+#modal_pic {
+    display: flex;
+    justify-content: center;
+}
+
+#input, #actual_hours {
+    padding: 5%;
+}
+
+#extra {
+    margin-top: 30px;
+}
+
+#filtering {
+    min-width: 130px;
+}
+
+.filtering{
+    padding: 10px;
+}
+
+#plus_btn {
+    --bs-btn-border-radius: 1rem;
+}
+
+#notes {
+    margin: 2%;
+}
+
+#filter_button {
+    margin-bottom: 20px;
+}
+
+#plus {
+    margin-top: 3%;
     display: flex;
     justify-content: space-between;
 }
