--- a/person_auth/templates/person_auth/base.html
+++ b/person_auth/templates/person_auth/base.html
@@ -18,9 +18,9 @@
     <title> {% block title %} My Site {% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md " style="background-color: transparent;>
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Navbar</a>
+          <a class="navbar-brand" href="/"><img src="{% static 'favicon-32x32.png' %}">&nbsp Working hours</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,11 +31,11 @@
               <div>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'person_auth:home' %}">Home</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'person_auth:home' %}">Home</a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'hour:home' %}">My working hours</a>
+                    <a class="nav-link" href="{% url 'hour:home' %}">The calendar</a>
                   </li>
                 </ul>
               </div>
@@ -44,7 +44,7 @@
               <div>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   {% if user.is_authenticated %}
-                    <span class="navbar-text">Logged in as {{ user.username }} |</span>
+                    <span class="navbar-text">Logged in as <strong>{{ user.username }} </strong> |</span>
 
                     <li class="nav-item">
                       <a class="nav-link" href="/logout">Logout</a>
@@ -66,10 +66,10 @@
     </nav>
 
 
-    <div class="container">
+    <main class="container-fluid" id="body">
         {% block content %}
         {% endblock %}
-    </div>
+    </main>
     {% block script %}
     {% endblock %} 
     
