--- a/person_auth/templates/person_auth/base.html
+++ b/person_auth/templates/person_auth/base.html
@@ -18,7 +18,7 @@
     <title> {% block title %} My Site {% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md " style="background-color: transparent;>
+    <nav class="navbar navbar-expand-md " style="background-color: transparent;">
         <div class="container-fluid">
           <a class="navbar-brand" href="/"><img src="{% static 'favicon-32x32.png' %}">&nbsp Working hours</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,6 +54,10 @@
 
                     <li class="nav-item">
                       <a class="nav-link" href="/login">Login</a>
+                    </li>
+
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'person_auth:sign_up' %}">Sign up</a>
                     </li>
 
                   {% endif %}
