--- a/hour/static/hour/styles.css
+++ b/hour/static/hour/styles.css
@@ -4,17 +4,16 @@ body {
     background-image: url(https://images.unsplash.com/photo-1588345921523-c2dcdb7f1dcd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 80%;
+    width: auto;
     margin-left:auto;
     margin-right:auto;
+    -webkit-text-size-adjust: 100%;
+    font-family: 'Lato', sans-serif;
 }
 
 main {
-    border-radius: 1rem;
     margin-top: 3%;
     margin-bottom: 5%;
-    /* background-color: rgba(248, 249, 250, 0.8); */
-    /* background-color: rgba(195,176,145, 0.8); */
 }
 
 .navbar {
@@ -145,7 +144,8 @@ main {
 }
 
 #login_parent {
-    padding: 10%;
+    padding: 7% 10% 10% 10%;
+    justify-content: space-around;
 }
 
 .responsive_img {
@@ -174,5 +174,34 @@ main {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
+/* 
+#padding {
+    padding: 5%;
+} */
+
+#homepage_cards {
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 5%;
+}
+
+.calendar-icon, .hour-icon, .avatar-icon {
+    padding-top: 7%;
+}
+
+#homepage_cards > .card {
+    margin: 10px;
+    border: none;
+    background-color: transparent;
+}
+
+.ques {
+    margin-top: 5%;
+}
+
+@media screen and (max-width:992px) {
+    body {
+        width: 100%;
+    }
