--- a/person_auth/templates/person_auth/index.html
+++ b/person_auth/templates/person_auth/index.html
@@ -1,11 +1,127 @@
 {% extends 'person_auth/base.html' %}
 {% load static %}
+
+{% block link %}
+<link rel="stylesheet" href="{% static 'hour/wave.css' %}">
+{% endblock %}
+
 {% block title %}Working hours{% endblock %}
-{% load crispy_forms_tags %}
+
 
 {% block content %}
+<!-- this animation wave source: https://codepen.io/goodkatz/pen/LYPGxQz -->
 
-<h1>hello</h1>
+
+<div class="header">
+    <div class="inner-header flex">
+    </div>
+
+    <div>
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+                <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(68, 187, 187,0.7" />
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(68, 187, 187,0.5)" />
+                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(68, 187, 187,0.3)" />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="rgba(68, 187, 187, 1)" />
+                />
+            </g>
+        </svg>
+    </div>
+</div>
+
+<div class="content flex">
+    <img src="{% static 'android-chrome-192x192.png' %}" alt=""  class="img-fluid rounded-circle shadow shadow-custom rounded" id="icon">
+    <!-- <div id="padding"></div> -->
+    <div class="slogan">
+        <div class="name">
+            <h1 style="color:white;"><strong>Working hours</strong></h1>
+       
+            <h2>A web application that can track</h2>
+        
+            <h2>yours hours in a work and beyond.</h2>
+        </div>
+    </div>      
+</div>
+
+<div class="header-reverse">
+    <div>
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+                <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(68, 187, 187,0.7" />
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(68, 187, 187,0.5)" />
+                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(68, 187, 187,0.3)" />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="rgba(68, 187, 187, 1)" />
+                />
+            </g>
+        </svg>
+    </div>
+    <!--Waves end-->
+    
+</div>
+
+<div class="d-grid gap-2 col-6 mx-auto text-center ques">
+    <div><h1>
+        What you can do?
+    </h1></div>
+</div>
+
+<div class="container d-flex" id="homepage_cards">
+    <div class="card text-center" style="width: 18rem;">
+        <div class="calendar-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="160" height="160" fill="#4bb" class="bi bi-calendar-day" viewBox="0 0 16 16">
+                <path d="M4.684 11.523v-2.3h2.261v-.61H4.684V6.801h2.464v-.61H4v5.332h.684zm3.296 0h.676V8.98c0-.554.227-1.007.953-1.007.125 0 .258.004.329.015v-.613a1.806 1.806 0 0 0-.254-.02c-.582 0-.891.32-1.012.567h-.02v-.504H7.98v4.105zm2.805-5.093c0 .238.192.425.43.425a.428.428 0 1 0 0-.855.426.426 0 0 0-.43.43zm.094 5.093h.672V7.418h-.672v4.105z"/>
+                <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+            </svg>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Create a day</h5>
+          <p class="card-text">Add a weekend day to your work or mark a day as a public holiday in your country.</p>
+        </div>
+    </div>
+    
+    <div class="card text-center" style="width: 18rem;">
+        <div class="hour-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="160" height="160" fill="#4bb" class="bi bi-hourglass-split" viewBox="0 0 16 16">
+                <path d="M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1h-11zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2h-7zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48V8.35zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z"/>
+            </svg>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Manage your day</h5>
+          <p class="card-text">Freely choose the time you worked, spend time at lunch or simply end your day early. You report to yourself.</p>
+        </div>
+     </div>
+
+    <div class="card text-center" style="width: 18rem;">
+        <div class="avatar-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="160" height="160" fill="#4bb" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+            </svg>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Create your avatar</h5>
+          <p class="card-text">Choose from many types of avatars representing you, your mood, your day ....</p>
+        </div>
+    </div>
+</div>
+
+<div class="d-grid gap-2 col-6 mx-auto text-center ques">
+    <div>Are you still wondering? Login and try!</div>
+    <div class="d-grid gap-2 col-6 mx-auto text-center">
+        <button class="btn btn-primary btn-lg">Login in</button>
+    </div>
+    <div>Don't have an account? Sign up 
+        <a href="{% url 'person_auth:sign_up' %}">here</a>
+        .</div>
+</div>
 {% endblock %}
 
 {% block script %}
