--- a/person_auth/templates/person_auth/index.html
+++ b/person_auth/templates/person_auth/index.html
@@ -115,9 +115,11 @@
 
 <div class="d-grid gap-2 col-6 mx-auto text-center ques">
     <div>Are you still wondering? Login and try!</div>
-    <div class="d-grid gap-2 col-6 mx-auto text-center">
-        <button class="btn btn-primary btn-lg">Login in</button>
-    </div>
+    <a href="/login" id="login_button">
+        <div class="d-grid gap-2 col-6 mx-auto text-center">
+            <button class="btn btn-primary btn-lg">Login in</button>
+        </div>
+    </a>
     <div>Don't have an account? Sign up 
         <a href="{% url 'person_auth:sign_up' %}">here</a>
         .</div>
