--- a/hour/static/hour/styles.css
+++ b/hour/static/hour/styles.css
@@ -11,12 +11,20 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+.container-xxl, .container-fluid{
+    padding-right: 0;
+    padding-left: 0;
+}
+
+
 main {
     margin-top: 3%;
     margin-bottom: 5%;
 }
 
 .navbar {
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5);
     --bs-navbar-hover-color: white;
     --bs-navbar-disabled-color: white;
     --bs-navbar-active-color: white;
