remove text from template

--- a/hour/templates/hour/home.html
+++ b/hour/templates/hour/home.html
@@ -16,9 +16,8 @@
     <div class="alert alert-warning" role="alert">
         <h4 class="alert-heading">Note!</h4>
         <p>Be sure to add a completed day, for daily check-in please use your homepage.</p>
-        <p>If you see an incompleted day/days (red marked) it's probably because you haven't completed daily check-in. Please review this day and complete it.</p>
         <hr>
-        <p class="mb-0">An incomplete day will be considered as 0 - your absence.</p>
+        <p class="mb-0">If you see an incompleted day/days (red marked) it's probably because you haven't completed daily check-in. Please review this day and complete it.</p>
     </div>
 
     <div class="" id="plus">
